[package]
name = "indirect11"
version = "0.1.0"
authors = ["NickelCoating <68106485+NickelCoating@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
com = "0.2.0"
#winapi = "0.3.9"

[dependencies.winapi]
version = "0.3.9"
features = ["minwindef"]